/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

syntax = "proto3";
package org.apache.geode.internal.protocol.protobuf;

enum MajorVersions {
    INVALID_MAJOR_VERSION = 0;  // Protobuf requires 0 based enum
    CURRENT_MAJOR_VERSION = 1;  // Initial message structure and handshake protocol
}
enum MinorVersions {
    INVALID_MINOR_VERSION = 0;  // Protobuf requires 0 based enum
    CURRENT_MINOR_VERSION = 1;  // Protobuf implementation at initial release
}

message NewConnectionClientVersion {
    fixed32 majorVersion = 1;
    fixed32 minorVersion = 2;
}

message VersionAcknowledgement {
    int32 serverMajorVersion = 1;
    int32 serverMinorVersion = 2;
    bool versionAccepted = 3;
}
